Fix word wrap for project section titles

--- a/css/main.css
+++ b/css/main.css
@@ -329,10 +329,6 @@ main>div {
   flex-wrap: wrap;
 }
 
-.projects-slides h2 {
-  white-space: nowrap;
-}
-
 .projects-slides>div {
   flex: 1 0 50%;
 }
